fix Benoit's afffiliation
darcs-hash:20060828132449-2fc9d-03457b50c6586f216c7b9728c8edf606f30aaf9a.gz

--- a/article/Article.tex
+++ b/article/Article.tex
@@ -45,7 +45,7 @@ colorlinks,linkcolor={blue},citecolor={blue},urlcolor={blue},
 \authoraddress{{$^1$}INRA, UMR 1198; ENVA; CNRS, FRE 2857, Biologie du D\'eveloppement et 
 Reproduction, Jouy en Josas, F-78350, France\\
 {$^2$}Program in Biomedical Informatics and Department of Biochemistry, Stanford University School of Medicine, Stanford, California\\
-{$^3$}CREATIS, CNRS UMR 5515, 69621 Villeurbanne, France}
+{$^3$}CREATIS, CNRS UMR 5515, Inserm U630, Univ. Lyon1, INSA Lyon, 69621 Villeurbanne, France}
 
 \begin{document}
 \lstset{language=python}
